--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 body
 {
-    background: #ffcac3;
-    font-family: cursive;
+    background: #E0FFFF;
+    font-family: sans-serif;
 }
 
 .about
